--- a/src/components/Case/s.module.scss
+++ b/src/components/Case/s.module.scss
@@ -18,7 +18,7 @@
   }
 
   @include Tablet {
-    grid-template-columns: vwt(360px) auto;
+    grid-template-columns: vwt(420px) auto;
     gap: vwt(20px);
     padding: vwt(20px);
     border-radius: vwt(8px);
@@ -26,7 +26,7 @@
   }
 
   @include Mobile {
-    grid-template-columns: vwm(360px) auto;
+    grid-template-columns: 1fr;
     gap: vwm(20px);
     padding: vwm(20px);
     border-radius: vwm(8px);
