--- a/src/components/Footer/s.module.scss
+++ b/src/components/Footer/s.module.scss
@@ -8,11 +8,11 @@
   }
 
   @include Tablet {
-
+    padding: vwt(40px) 0 vwt(80px);
   }
 
   @include Mobile {
-
+    padding: vwm(40px) 0 vwm(40px);
   }
 
 }
@@ -75,11 +75,11 @@
   }
 
   @include Tablet {
-    gap: vwt(100px);
+    gap: vwt(60px);
   }
 
   @include Mobile {
-    gap: vwm(100px);
+    gap: vwm(60px);
   }
 }
 
@@ -94,11 +94,11 @@
   }
 
   @include Tablet {
-    font-size: vwt(28px);
+    font-size: vwt(20px);
   }
 
   @include Mobile {
-    font-size: vwm(28px);
+    font-size: vwm(20px);
   }
 
   @media (hover: hover) and (pointer: fine) {
@@ -128,6 +128,7 @@
   height: vw(220px);
 
   @include HD {
+    animation-name: space-hd;
     top: vwh(30px);
     right: vwh(50px);
     width: vwh(200px);
@@ -135,11 +136,19 @@
   }
 
   @include Tablet {
-
+    animation-name: space-t;
+    top: vwt(-10px);
+    right: vwt(50px);
+    width: vwt(200px);
+    height: vwt(200px);
   }
 
   @include Mobile {
-
+    top: vwm(25px);
+    right: vwm(0px);
+    width: vwm(160px);
+    height: vwm(160px);
+    animation-name: space-m;
   }
 
   img {
@@ -159,44 +168,52 @@
   }
 
   @include Tablet {
-
+    font-size: vwt(16px);
+    max-width: vwt(360px);
   }
 
   @include Mobile {
-
+    font-size: vwm(16px);
+    max-width: 100%;
   }
 }
 
 @keyframes space {
   0% {
     filter: drop-shadow(0 0 vw(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
-
-    @include HD {
-      filter: drop-shadow(0 0 vwh(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
-
-    @include Tablet {
-      filter: drop-shadow(0 0 vwt(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
-
-    @include Mobile {
-      filter: drop-shadow(0 0 vwm(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
   }
 
   100% {
     filter: drop-shadow(0 0 vw(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+}
 
-    @include HD {
-      filter: drop-shadow(0 0 vwh(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
+@keyframes space-hd {
+  0% {
+    filter: drop-shadow(0 0 vwh(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
 
-    @include Tablet {
-      filter: drop-shadow(0 0 vwt(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
+  100% {
+    filter: drop-shadow(0 0 vwh(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+}
 
-    @include Mobile {
-      filter: drop-shadow(0 0 vwm(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
-    }
+@keyframes space-t {
+  0% {
+    filter: drop-shadow(0 0 vwt(25px) rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+
+  100% {
+    filter: drop-shadow(0 0 vwt(35px) rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+}
+
+@keyframes space-m {
+  0% {
+    filter: drop-shadow(0 0 vwm(25px) rgba(238, 238, 238, 0.2)) brightness(40%);
+  }
+
+  100% {
+    filter: drop-shadow(0 0 vwm(35px) rgba(238, 238, 238, 0.2)) brightness(42%);
   }
 }
