--- a/src/components/Background/s.module.scss
+++ b/src/components/Background/s.module.scss
@@ -27,9 +27,8 @@
   animation-iteration-count: infinite;
 }
 
-
 .background span:nth-child(0) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 73%;
   left: 15%;
   animation-duration: 295s;
@@ -37,8 +36,9 @@
   transform-origin: 14vw -13vh;
   box-shadow: -2vmin 0 0.43360112025720965vmin currentColor;
 }
+
 .background span:nth-child(1) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 58%;
   left: 11%;
   animation-duration: 12s;
@@ -46,8 +46,9 @@
   transform-origin: 16vw 14vh;
   box-shadow: 2vmin 0 0.6579770330665078vmin currentColor;
 }
+
 .background span:nth-child(2) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 15%;
   left: 16%;
   animation-duration: 247s;
@@ -55,8 +56,9 @@
   transform-origin: -4vw -20vh;
   box-shadow: -2vmin 0 0.7463668658800144vmin currentColor;
 }
+
 .background span:nth-child(3) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 95%;
   left: 90%;
   animation-duration: 98s;
@@ -64,8 +66,9 @@
   transform-origin: -17vw 25vh;
   box-shadow: -2vmin 0 0.3733185263497092vmin currentColor;
 }
+
 .background span:nth-child(4) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 50%;
   left: 85%;
   animation-duration: 52s;
@@ -73,8 +76,9 @@
   transform-origin: -17vw 17vh;
   box-shadow: -2vmin 0 0.9787663575988863vmin currentColor;
 }
+
 .background span:nth-child(5) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 66%;
   left: 84%;
   animation-duration: 71s;
@@ -82,8 +86,9 @@
   transform-origin: -14vw -7vh;
   box-shadow: 2vmin 0 0.49832216688102426vmin currentColor;
 }
+
 .background span:nth-child(6) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 85%;
   left: 67%;
   animation-duration: 137s;
@@ -91,8 +96,9 @@
   transform-origin: -9vw -3vh;
   box-shadow: -2vmin 0 1.0831519261093359vmin currentColor;
 }
+
 .background span:nth-child(7) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 97%;
   left: 90%;
   animation-duration: 290s;
@@ -100,8 +106,9 @@
   transform-origin: -8vw 24vh;
   box-shadow: -2vmin 0 1.1211052462598956vmin currentColor;
 }
+
 .background span:nth-child(8) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 46%;
   left: 60%;
   animation-duration: 257s;
@@ -109,8 +116,9 @@
   transform-origin: -15vw 18vh;
   box-shadow: -2vmin 0 0.362100954652681vmin currentColor;
 }
+
 .background span:nth-child(9) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 63%;
   left: 94%;
   animation-duration: 126s;
@@ -118,8 +126,9 @@
   transform-origin: -15vw 0vh;
   box-shadow: -2vmin 0 0.7818599655085499vmin currentColor;
 }
+
 .background span:nth-child(10) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 12%;
   left: 73%;
   animation-duration: 19s;
@@ -127,8 +136,9 @@
   transform-origin: 9vw 12vh;
   box-shadow: 2vmin 0 0.8780079738085007vmin currentColor;
 }
+
 .background span:nth-child(11) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 12%;
   left: 86%;
   animation-duration: 182s;
@@ -136,8 +146,9 @@
   transform-origin: 16vw -7vh;
   box-shadow: 2vmin 0 1.2474774612860418vmin currentColor;
 }
+
 .background span:nth-child(12) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 34%;
   left: 64%;
   animation-duration: 183s;
@@ -145,8 +156,9 @@
   transform-origin: -19vw -21vh;
   box-shadow: 2vmin 0 0.39714839205545105vmin currentColor;
 }
+
 .background span:nth-child(13) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 2%;
   left: 64%;
   animation-duration: 178s;
@@ -154,8 +166,9 @@
   transform-origin: -14vw -6vh;
   box-shadow: 2vmin 0 0.39619759187245407vmin currentColor;
 }
+
 .background span:nth-child(14) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 7%;
   left: 49%;
   animation-duration: 278s;
@@ -163,8 +176,9 @@
   transform-origin: 13vw 1vh;
   box-shadow: -2vmin 0 0.5242615310574041vmin currentColor;
 }
+
 .background span:nth-child(15) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 78%;
   left: 26%;
   animation-duration: 339s;
@@ -172,8 +186,9 @@
   transform-origin: 9vw -14vh;
   box-shadow: 2vmin 0 0.30371231836156865vmin currentColor;
 }
+
 .background span:nth-child(16) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 8%;
   left: 75%;
   animation-duration: 155s;
@@ -181,8 +196,9 @@
   transform-origin: 1vw -3vh;
   box-shadow: 2vmin 0 0.8087838159478948vmin currentColor;
 }
+
 .background span:nth-child(17) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 85%;
   left: 97%;
   animation-duration: 61s;
@@ -190,8 +206,9 @@
   transform-origin: -15vw -10vh;
   box-shadow: 2vmin 0 1.0321620327127066vmin currentColor;
 }
+
 .background span:nth-child(18) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 1%;
   left: 82%;
   animation-duration: 295s;
@@ -199,8 +216,9 @@
   transform-origin: -13vw -5vh;
   box-shadow: 2vmin 0 0.33307937477583605vmin currentColor;
 }
+
 .background span:nth-child(19) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 78%;
   left: 42%;
   animation-duration: 199s;
@@ -208,8 +226,9 @@
   transform-origin: 15vw -15vh;
   box-shadow: -2vmin 0 1.074577709131729vmin currentColor;
 }
+
 .background span:nth-child(20) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 27%;
   left: 97%;
   animation-duration: 124s;
@@ -217,8 +236,9 @@
   transform-origin: 0vw -10vh;
   box-shadow: -2vmin 0 0.88450593831301vmin currentColor;
 }
+
 .background span:nth-child(21) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 17%;
   left: 97%;
   animation-duration: 121s;
@@ -226,8 +246,9 @@
   transform-origin: -12vw -13vh;
   box-shadow: -2vmin 0 1.0013652710811778vmin currentColor;
 }
+
 .background span:nth-child(22) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 21%;
   left: 63%;
   animation-duration: 183s;
@@ -235,8 +256,9 @@
   transform-origin: -17vw 0vh;
   box-shadow: 2vmin 0 0.5344631755367526vmin currentColor;
 }
+
 .background span:nth-child(23) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 55%;
   left: 11%;
   animation-duration: 14s;
@@ -244,8 +266,9 @@
   transform-origin: 2vw -7vh;
   box-shadow: -2vmin 0 0.48944245950783394vmin currentColor;
 }
+
 .background span:nth-child(24) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 16%;
   left: 30%;
   animation-duration: 54s;
@@ -253,8 +276,9 @@
   transform-origin: 21vw 1vh;
   box-shadow: -2vmin 0 1.0486802626667218vmin currentColor;
 }
+
 .background span:nth-child(25) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 95%;
   left: 46%;
   animation-duration: 210s;
@@ -262,8 +286,9 @@
   transform-origin: -9vw 6vh;
   box-shadow: -2vmin 0 0.5879978664996257vmin currentColor;
 }
+
 .background span:nth-child(26) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 95%;
   left: 6%;
   animation-duration: 319s;
@@ -271,8 +296,9 @@
   transform-origin: 13vw 18vh;
   box-shadow: -2vmin 0 0.47094859198181216vmin currentColor;
 }
+
 .background span:nth-child(27) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 17%;
   left: 88%;
   animation-duration: 234s;
@@ -280,8 +306,9 @@
   transform-origin: -12vw -4vh;
   box-shadow: 2vmin 0 0.5430386574275179vmin currentColor;
 }
+
 .background span:nth-child(28) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 41%;
   left: 4%;
   animation-duration: 156s;
@@ -289,8 +316,9 @@
   transform-origin: 2vw 11vh;
   box-shadow: 2vmin 0 1.2130229227399583vmin currentColor;
 }
+
 .background span:nth-child(29) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 27%;
   left: 98%;
   animation-duration: 153s;
@@ -298,8 +326,9 @@
   transform-origin: 20vw 7vh;
   box-shadow: 2vmin 0 0.58500315956585vmin currentColor;
 }
+
 .background span:nth-child(30) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 73%;
   left: 14%;
   animation-duration: 58s;
@@ -307,8 +336,9 @@
   transform-origin: 1vw -10vh;
   box-shadow: -2vmin 0 1.0600198536379142vmin currentColor;
 }
+
 .background span:nth-child(31) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 29%;
   left: 79%;
   animation-duration: 174s;
@@ -316,8 +346,9 @@
   transform-origin: 0vw 3vh;
   box-shadow: 2vmin 0 0.8841665175567288vmin currentColor;
 }
+
 .background span:nth-child(32) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 97%;
   left: 69%;
   animation-duration: 15s;
@@ -325,8 +356,9 @@
   transform-origin: 6vw -23vh;
   box-shadow: -2vmin 0 0.8846497824159707vmin currentColor;
 }
+
 .background span:nth-child(33) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 32%;
   left: 8%;
   animation-duration: 35s;
@@ -334,8 +366,9 @@
   transform-origin: -15vw -21vh;
   box-shadow: 2vmin 0 0.3671876368961171vmin currentColor;
 }
+
 .background span:nth-child(34) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 53%;
   left: 22%;
   animation-duration: 33s;
@@ -343,8 +376,9 @@
   transform-origin: -20vw -10vh;
   box-shadow: -2vmin 0 0.6814928336445532vmin currentColor;
 }
+
 .background span:nth-child(35) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 62%;
   left: 48%;
   animation-duration: 196s;
@@ -352,8 +386,9 @@
   transform-origin: -5vw -4vh;
   box-shadow: -2vmin 0 0.9355032058656556vmin currentColor;
 }
+
 .background span:nth-child(36) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 75%;
   left: 50%;
   animation-duration: 254s;
@@ -361,8 +396,9 @@
   transform-origin: -20vw -18vh;
   box-shadow: -2vmin 0 0.8862045507848084vmin currentColor;
 }
+
 .background span:nth-child(37) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 27%;
   left: 5%;
   animation-duration: 77s;
@@ -370,8 +406,9 @@
   transform-origin: -21vw 14vh;
   box-shadow: -2vmin 0 0.6830899416136453vmin currentColor;
 }
+
 .background span:nth-child(38) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 6%;
   left: 80%;
   animation-duration: 212s;
@@ -379,8 +416,9 @@
   transform-origin: -20vw 15vh;
   box-shadow: -2vmin 0 0.7476394992438598vmin currentColor;
 }
+
 .background span:nth-child(39) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 77%;
   left: 92%;
   animation-duration: 186s;
@@ -388,8 +426,9 @@
   transform-origin: -23vw -5vh;
   box-shadow: 2vmin 0 0.7359373972278043vmin currentColor;
 }
+
 .background span:nth-child(40) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 15%;
   left: 18%;
   animation-duration: 238s;
@@ -397,8 +436,9 @@
   transform-origin: 21vw -3vh;
   box-shadow: -2vmin 0 1.0910495891858671vmin currentColor;
 }
+
 .background span:nth-child(41) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 60%;
   left: 12%;
   animation-duration: 327s;
@@ -406,8 +446,9 @@
   transform-origin: 13vw -11vh;
   box-shadow: 2vmin 0 0.34703169906024844vmin currentColor;
 }
+
 .background span:nth-child(42) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 98%;
   left: 7%;
   animation-duration: 175s;
@@ -415,8 +456,9 @@
   transform-origin: -21vw -20vh;
   box-shadow: 2vmin 0 1.0212892069870356vmin currentColor;
 }
+
 .background span:nth-child(43) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 28%;
   left: 25%;
   animation-duration: 93s;
@@ -424,8 +466,9 @@
   transform-origin: 9vw 23vh;
   box-shadow: 2vmin 0 0.4796489955247789vmin currentColor;
 }
+
 .background span:nth-child(44) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 96%;
   left: 90%;
   animation-duration: 241s;
@@ -433,8 +476,9 @@
   transform-origin: 1vw -2vh;
   box-shadow: 2vmin 0 0.7228985473925666vmin currentColor;
 }
+
 .background span:nth-child(45) {
-  color: #35434b;
+  color: var(--background-secondary-stars);
   top: 15%;
   left: 73%;
   animation-duration: 22s;
@@ -442,8 +486,9 @@
   transform-origin: 23vw -18vh;
   box-shadow: -2vmin 0 0.7090435793071348vmin currentColor;
 }
+
 .background span:nth-child(46) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 34%;
   left: 76%;
   animation-duration: 220s;
@@ -451,8 +496,9 @@
   transform-origin: -10vw 11vh;
   box-shadow: -2vmin 0 0.7474080470680433vmin currentColor;
 }
+
 .background span:nth-child(47) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 16%;
   left: 41%;
   animation-duration: 301s;
@@ -460,8 +506,9 @@
   transform-origin: 9vw -2vh;
   box-shadow: 2vmin 0 0.9416076466295134vmin currentColor;
 }
+
 .background span:nth-child(48) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 53%;
   left: 86%;
   animation-duration: 49s;
@@ -469,8 +516,9 @@
   transform-origin: -21vw 7vh;
   box-shadow: -2vmin 0 0.8155632177193264vmin currentColor;
 }
+
 .background span:nth-child(49) {
-  color: #bfbfc0;
+  color: var(--background-primary-stars);
   top: 48%;
   left: 90%;
   animation-duration: 24s;
