--- a/src/pages/ProjectsPage/s.module.scss
+++ b/src/pages/ProjectsPage/s.module.scss
@@ -1,43 +1,58 @@
 @import "../../scss/utils";
 
-.cards {
-  display: grid;
-  gap: vw(20px);
-  margin-bottom: vw(30px);
+.wrapper {
+  margin: 0 vw(250px);
 
   @include HD {
-    gap: vwh(20px);
-    margin-bottom: vwh(30px);
+    margin: 0 vwh(45px);
   }
 
   @include Tablet {
-    gap: vwt(20px);
-    margin-bottom: vwt(30px);
+    margin: 0 vwt(24x);
   }
 
   @include Mobile {
-    gap: vwm(20px);
-    margin-bottom: vwm(30px);
+    margin: 0 vwm(24px);
+  }
+}
+
+.box {
+  padding: vw(160px) 0 vw(40px);
+
+  @include HD {
+    padding: vwh(140px) 0 vwh(20px);
+  }
+
+  @include Tablet {
+    padding: vwt(80px) 0 vwt(20px);
+  }
+
+  @include Mobile {
+    padding: vwm(80px) 0 vwm(20px);
   }
 }
 
 .link {
   color: var(--text-primary);
   display: inline-flex;
-  align-items: center;
+  align-items: flex-end;
   transition: color 0.2s ease;
   gap: vw(5px);
+  margin-bottom: vw(20px);
 
   @include HD {
     gap: vwh(5px);
+    margin-bottom: vwh(20px);
   }
 
   @include Tablet {
     gap: vwt(5px);
+    margin-bottom: vwt(20px);
   }
 
   @include Mobile {
     gap: vwm(5px);
+    margin-bottom: vwm(20px);
   }
 
   @media (any-hover: hover) {
@@ -46,18 +61,18 @@
 
       svg {
         fill: var(--link-color-hover);
-        transform: translateX(vw(4px));
+        transform: translateX(vw(-4px));
 
         @include HD {
-          transform: translateX(vwh(4px));
+          transform: translateX(vwh(-4px));
         }
 
         @include Tablet {
-          transform: translateX(vwt(4px));
+          transform: translateX(vwt(-4px));
         }
 
         @include Mobile {
-          transform: translateX(vwm(4px));
+          transform: translateX(vwm(-4px));
         }
       }
     }
@@ -67,7 +82,7 @@
     transition: color 0.1s ease;
     color: var(--link-color-active);
 
-    svg{
+    svg {
       transition: fill 0.1s ease;
       fill: var(--link-color-active);
     }
@@ -76,22 +91,31 @@
   svg {
     fill: var(--text-primary);
     transition: transform 0.2s linear, fill 0.2s ease;
-    width: vw(19px);
-    height: vw(30px);
+    width: vw(20px);
+    height: vw(23px);
 
     @include HD {
-      width: vwh(19px);
-      height: vwh(30px);
+      width: vwh(20px);
+      height: vwh(23px);
     }
 
     @include Tablet {
-      width: vwt(19px);
-      height: vwt(30px);
+      width: vwt(20px);
+      height: vwt(23px);
     }
 
     @include Mobile {
-      width: vwm(19px);
-      height: vwm(30px);
+      width: vwm(20px);
+      height: vwm(23px);
     }
   }
+
+  span {
+    line-height: 1;
+  }
 }
+
+.title {
+  margin-bottom: vw(50px);
+}
+
