local connection of the font, the mobile version of the projects page is implemented

--- a/src/components/Background/s.module.scss
+++ b/src/components/Background/s.module.scss
@@ -343,7 +343,7 @@
   left: 79%;
   animation-duration: 174s;
   animation-delay: -52s;
-  transform-origin: 0vw 3vh;
+  transform-origin: 0 3vh;
   box-shadow: 2vmin 0 0.8841665175567288vmin currentColor;
 }
 
